# TaxAgentServer

./: .env.example  .gitignore  README.md  brower_server.py  gentoken.py  main.py  pyproject.toml  requirements.txt
docs/: spouse.md  t3.md  t5.md  ufile.md  video.md
extlib/: custom_fast_api.py  custom_mongodb_session_service.py  custom_sessions.py  helpers.py
extlib/auth/: auth_dependencies.py  auth_models.py  auth_router.py  database.py  firebase_config.py  jwt_handler.py  user_crud.py
income_tax_agent/: agent.py  brower_server.py  playwright_helper.py
income_tax_agent/ufile/: ufile_info.py  ufile_person.py  ufile_t3.py  ufile_t3_update.py  ufile_t4.py  ufile_t4a.py  ufile_t5.py  ufile_t5008.py  ufile_util.py
